--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="{% static 'responsive.css' %} ">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 </head>
@@ -17,7 +17,7 @@
 
     <div class="wrapper">
     	<div class="main-body">
-		    <h1> Weather Info</h1>
+		    <h1> Weather Info <span class="info">under construction</span></h1>
 
                  {% block content %}
                  {% endblock  %}
